[package]
name = "simulation"
version = "0.0.2-alpha.0"
authors = ["Gardner Vickers <gardner@vickers.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gardnervickers/simulation"
description = """
Framework for FoundationDB style deterministic simulation testing.
"""
readme = "README.md"
categories = ["simulation", "asynchronous", "network-programming"]
keywords = ["simulation", "deterministic", "asynchronous", "testing"]

[dependencies]
tokio = {version = "0.2.0-alpha.5", features = ["sync"]}
futures-preview = {version = "0.3.0-alpha.19", features = ["async-await"]}
tokio-timer = "0.3.0-alpha.6"
tokio-executor = {version = "0.2.0-alpha.5"}
tokio-net = {version = "0.2.0-alpha.5"}
bytes = "0.4.12"
tokio-sync = "0.2.0-alpha.6"
try-lock = "0.2.2"
tokio-test = "0.2.0-alpha.6"
rand = {version = "0.7.2", features =["small_rng"]}
async-trait = "0.1.14"
pin-project = "0.4.4"
tokio-io = {version = "0.2.0-alpha.5"}

[dev-dependencies]
tonic = "0.1.0-alpha.3"
prost = "0.5"
tower = "=0.3.0-alpha.2"
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"]}
tower-service = "0.2.0"
http = "0.1.19"
