[package]
name = "simulation"
version = "0.0.2-alpha.0"
authors = ["Gardner Vickers <gardner@vickers.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gardnervickers/simulation"
description = """
Framework for FoundationDB style deterministic simulation testing.
"""
readme = "README.md"
categories = ["simulation", "asynchronous", "network-programming"]
keywords = ["simulation", "deterministic", "asynchronous", "testing"]

[dependencies]
bytes = "0.5.3"
futures = "0.3.1"
tokio = { version = "0.2.6", features = ["full"] }

[dev-dependencies]
tokio-util = { version = "0.2.0", features = ["full"] }
