[package]
name = "simulation"
version = "0.0.2-alpha.1"
authors = ["Gardner Vickers <gardner@vickers.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gardnervickers/simulation"
description = """
Framework for FoundationDB style deterministic simulation testing.
"""
readme = "README.md"
categories = ["simulation", "asynchronous", "network-programming"]
keywords = ["simulation", "deterministic", "asynchronous", "testing"]

[dependencies]
tokio = { features = ["full", "test-util"], git = "https://github.com/tokio-rs/tokio", branch = "freezetime"}
pin-project = "0.4.8"
bytes = "0.5.4"
futures = "0.3.4"
rand = {version = "0.7.3", features = ["small_rng"]}
rand_distr = "0.2.2"

[dev-dependencies]
futures-test = { version = "0.3.4"}
tokio-util = {features = ["codec"], git = "https://github.com/tokio-rs/tokio", branch = "freezetime"}
